# color-tiles

./: .gitignore  CMakeLists.txt  ProjectHome.md  README.md  Tiles.pri  Tiles.pro  TilesArea.cpp  TilesArea.h  main.cpp  solver.cpp  solver.h  tiles.cpp  tiles.h  tiles.qrc  tiles.ui
trunk/: Tiles.pro  TilesArea.cpp  TilesArea.h  solver.cpp  solver.h  tiles.cpp  tiles.h  tiles.ui
